[gd_scene load_steps=18 format=3 uid="uid://ddunu2hh2p254"]

[ext_resource type="Script" uid="uid://d0k2cin0wcivn" path="res://scenes/ui/meta_upgrade_card.gd" id="1_3art6"]
[ext_resource type="PackedScene" uid="uid://twf6g12pmaov" path="res://scenes/component/random_stream_player_component.tscn" id="2_q2g8u"]
[ext_resource type="AudioStream" uid="uid://cn8tgw3388wgh" path="res://assets/audio/switch1.ogg" id="3_85xxw"]
[ext_resource type="AudioStream" uid="uid://cmoowdp3tv286" path="res://assets/audio/switch2.ogg" id="4_fru07"]
[ext_resource type="AudioStream" uid="uid://w2kf8kw4o8ab" path="res://assets/audio/switch3.ogg" id="5_34nwv"]
[ext_resource type="AudioStream" uid="uid://w3xw8v74o42p" path="res://assets/audio/switch4.ogg" id="6_jv31y"]
[ext_resource type="AudioStream" uid="uid://c87p6m1c52q5x" path="res://assets/audio/switch5.ogg" id="7_w6g5h"]
[ext_resource type="AudioStream" uid="uid://bp5cmuxr3okly" path="res://assets/audio/switch6.ogg" id="8_5muvj"]
[ext_resource type="AudioStream" uid="uid://cih70ou25sn76" path="res://assets/audio/switch7.ogg" id="9_waj3d"]
[ext_resource type="AudioStream" uid="uid://c2xrm1xtej5di" path="res://assets/audio/switch8.ogg" id="10_qfmqr"]
[ext_resource type="AudioStream" uid="uid://diwuude53ui52" path="res://assets/audio/switch9.ogg" id="11_cpo8x"]
[ext_resource type="AudioStream" uid="uid://c5rxsav23tckf" path="res://assets/audio/switch10.ogg" id="12_1hn27"]
[ext_resource type="Texture2D" uid="uid://bkoci6fp4urol" path="res://scenes/game_object/experience_vial/tile_0126.png" id="13_q2g8u"]

[sub_resource type="Animation" id="Animation_m44y0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rxqlh"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 3.03143, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4j7u"]
_data = {
&"RESET": SubResource("Animation_m44y0"),
&"selected": SubResource("Animation_rxqlh")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85xxw"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 240)
offset_right = 170.0
offset_bottom = 211.0
pivot_offset = Vector2(75, 75)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_3art6")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_q2g8u")]
streams = Array[AudioStream]([ExtResource("3_85xxw"), ExtResource("4_fru07"), ExtResource("5_34nwv"), ExtResource("6_jv31y"), ExtResource("7_w6g5h"), ExtResource("8_5muvj"), ExtResource("9_waj3d"), ExtResource("10_qfmqr"), ExtResource("11_cpo8x"), ExtResource("12_1hn27")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4j7u")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Test name"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme_type_variation = &"BlueOutlineLabel"
text = "Write some
description here as you write a long description"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 0
theme_type_variation = &"BlueOutlineLabel"
text = "50/200"

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BlueOutlineLabel"
text = "x0"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_85xxw")
max_value = 1.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -8.0
offset_right = 8.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
texture = ExtResource("13_q2g8u")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "购买"
